--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #000;
 }
 
 #contenedor-infoSRT {
@@ -42,11 +43,11 @@
 
 
 .card {
-    color: #fff;
+    color: #000;
 }
 
 .card-title {
-    color: #fff;
+    color: #000;
     font-weight: 600 !important;
 }
 
@@ -98,7 +99,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
-    color: #fff;
+    color: #000;
     cursor: pointer;
     display: block;
     font-size: 1.2em;
